fix: 任务列表、策略id类型等问题